--- a/assets/stylesheets/base/_typography.scss
+++ b/assets/stylesheets/base/_typography.scss
@@ -28,11 +28,11 @@ h6 {
   font-size: modular-scale(1);
   font-weight: $font-weight-semibold;
   line-height: $line-height-heading;
-  margin: 0 0 $space-small;
+  // margin: 0 0 $space-small;
 }
 
 p {
-  margin: 0 0 $space-small;
+  // margin: 0 0 $space-small;
 }
 
 a {
